test/functions/fcf/ErrorArray.chpl

var x = proc(x : [1..10] int) : void {

};
compilerWarning(x.type : string);
